# WebDAV_coldstorage

./: .gitignore  README.rst  filelist.txt  main.py  pyproject.toml  structure.txt
configuration/: arguments.py
nextcloud_archiver/: cacheallocator.py  proc_handler.py  webdavclient.py
tests/: test_client.py  test_config.py  test_nextcloud_archiver.py
webdav_freezer/: compression.py  proc_handler.py  utils.py
